# dcgrid-forecast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
deploy/k8s/: 00-namespace.yaml  10-postgres.yaml  11-minio.yaml  20-api.yaml  21-dashboard.yaml  30-jobs.yaml  35-mlflow.yaml  60-job-ingest.yaml  70-job-train.yaml
docs/: ARCHITECTURE.md  DATA_SOURCES.md
infra/: docker-compose.local.yaml
infra/k3s/: bootstrap.sh  build-images.sh  docker-compose.k3s.yaml  kubectl.sh  port-forward.sh  use-k3s.env
infra/k3s/kubeconfig/: kubeconfig.yaml
infra/mlflow/: Dockerfile
services/dcgrid/: config.py  db.py  features.py  storage.py  worker.Dockerfile
services/dcgrid/api/: Dockerfile  main.py
services/dcgrid/dashboard/: Dockerfile  app.py
services/dcgrid/models/: prophet_baseline.py  tft.py
services/dcgrid/scripts/: ingest.py  train.py
